<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".MainActivity" android:background="#000000">
    <Button
            android:text="@string/play_game"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:id="@+id/play_game_button"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="24sp" android:onClick="playGameButtonListener"
            app:layout_constraintBottom_toTopOf="@+id/settings_button"/>
    <Button
            android:text="@string/about"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:id="@+id/about_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintBottom_toTopOf="@+id/exit_button" android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/settings_button" android:onClick="aboutButtonListener"/>
    <Button
            android:text="@string/exit"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:id="@+id/exit_button"
            app:layout_constraintTop_toBottomOf="@+id/about_button" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:textSize="24sp" android:onClick="exitButtonListener"/>
    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/play_game_button" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textSize="30sp" android:textColor="@color/white"/>
    <Button
            android:text="@string/settings_button"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:id="@+id/settings_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.504"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/play_game_button"
            app:layout_constraintBottom_toTopOf="@+id/about_button" android:onClick="settingsButtonListener"/>
</androidx.constraintlayout.widget.ConstraintLayout>